# ltzf-backend

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  README.md  SETUP.md  jsoncmp.sh  oapigen.ps1  oapigen.sh  set-version.py  variables.toml
.sqlx/: query-0027f425f20f27298198f9543ad8163c6f3c20b03b36227a8930b87b1f5d9ca3.json  query-04c576d61c900217301642164dcc991e3bb41624cd9dec57629dcdf59b54f30f.json  query-079d129a4e08522e1f4391e9e187c517e31e304f473818870e4e2b67867c1465.json  query-07dacefb0c64907dceb347cf0a2fcdfcc952fe2279095285e247c63f91c5313b.json  query-09f6f97d8760eb3f88d81f3a8ad7e61d52a9a2c0afa9f66f0a02ad0948ddca93.json  query-0ba8010d4d13fe0966277e2966840b5e0b6bcc2fe13387a876753eaedf3f4af2.json  query-0e61001c8f46ae9c1e6033adff8b9c1d53bad4b84e99e39d1d391b4793129b8a.json  query-0e7db3463166da0542c7f4f8a644c2aa170cc1ab40f528ec7d1b178e2b8ee502.json  query-0f39a6142abd73932f1c543cc555a2998894e1f91d3b2f13a145ae30eef210a7.json  query-107a0bfa840084dfb97a11019e51d20f0f3bf73eaab158e81b19c82b2fb33571.json  query-1255cd850b973f967115b18357ce6754dd086b00b08cacc92c58914634fb67a5.json  query-17685459e1cff9ef2e16ef608e3148719586169a808f64e13fb22195969c8d12.json  query-1a34b716225bcfdf3aff17d8d6a9ae57287a2e53999452270299eec20a4197c4.json  query-1a866ac448fe8d326acded4cc09adf5de7be1867be4b17b4c90574d62a33253b.json  query-1d67caef42d9edbbd422bff91743e9a624315a6e0bd0f2ad3996bd8ee4450e47.json  query-1e55613429bd7a9990a35c894cb32e73dcff202928380d472fd414a8cf8a8d95.json  query-1f7ef75c2f29206d18c3f520f5fd6143a448be97d8068c06f9ca99de1670dd97.json  query-25888d2417a187bb7fd172470b7e9e5a6da97d1837b877cb31151b0b3bf7a782.json  query-2768ce8d57cd61377945ab64419ed8effe43a2fbeef57826c23ca8b984fc80a6.json  query-27cf345adff3cb7a4ae3002aef69e59c3b27e67c816a6019d6d25d417740518a.json  query-2876179148105023bbac102d4fd0c158f067a42dd8429bf1ee49ae2dea3efc6a.json  query-2a41dbef7861218a4cc20384e9084ed1b704d86a95bba4f7fa9ffc651ba2d84f.json  query-2cb8ee19bef6a10da6582c56595510e9d77723c317b547eb8d18b7bb3754cb45.json  query-31366379f8d1cb29902ed363ccd97506a1cc7fbac5b78db4263f77dd7574db12.json  query-3171dc11961afcb88b336f258d79eedcd2fde55325f25a1e38235a1ed6b17e8f.json  query-3276f1615c383fba61f622ef8084749132f871a8df38e9137b6f2ebb12ccc108.json  query-37d939ea9248b6bf3c81be0f50778f36e24edab6f87f5c54c95ec8cce08cb0cc.json  query-3cb0952ad5cd45cf65f9b32a31aa7a33bf4068381a4fa11f82f4b7aad6185451.json  query-3cbb6dabe2b98a0a1e816edbd934d0a027729874332e8638f28668c067158d10.json  query-3e0f0612f530e78bea0e9630240e21e05f02b2c652ac2d42d12d36de55ca55ca.json  query-3efda6b5466dafa04d439169465bf0314f75590e7e5231478f78b32164f815d0.json  (+113 more)
ltzf-scenario-expand/: Cargo.toml  README.md
ltzf-scenario-expand/src/: lib.rs  vorgang.rs
ltzf-scenario-expand/tests/: scenario_sitzung.json  scenario_vorgang.json  single_arrays.json  test_array_objects_insertion.json  test_array_ov_lt_base.json  test_single_array_objects.json  test_single_arrays.json  test_single_arrays_reset.json  test_vorgang.json
src/: error.rs  (+2 more)
(+46 files in other folders)
