[package]
name = "ltzf-db"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
authors = ["Benedikt Schäfer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

axum = { version = "0.8", features = ["macros"] }
axum-extra = {version = "0.10", features= ["cookie"]}
axum-macros = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v7", "serde"] }
derive_builder = "0.20"
clap = { version = "4.5", features = ["derive", "env"] }
lettre = "0.11"

dotenv = "0.15"
snafu = "0.8"
sha256 = "1.5"
rand = "0.8"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
tower-http = { version = "0.6", features = ["limit"] }
axum_gcra = "0.1"
async-trait = "0.1"

[dev-dependencies]
similar = "2.7"
