[package]
name = "ltzf-scenario-expand"
description = "Crate to simplify testing scenarios by providing a way to reuse object descriptions thus saving on space and ease spotting differences"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"